--- a/playbooks/oracle_licence_audit/audit/tasks/audit-database.yml
+++ b/playbooks/oracle_licence_audit/audit/tasks/audit-database.yml
@@ -4,14 +4,8 @@
 
 - name: Set fact for output names we do expect from running the scripts
   set_fact:
-    new_host: "{{ inventory_hostname }}"
-    sql_output: "{{ ansible_facts.fqdn }}_{{ db.stdout }}"
-    cpu_output: "{{ ansible_facts.fqdn }}-ct_cpuq.txt"
-
-- name: Set fact for new output names
-  set_fact:
-    new_sql_output: "{{ new_host }}-{{ db.stdout }}"
-    new_cpu_output: "{{ new_host }}-ct_cpuq.txt"
+    sql_output: "{{ inventory_hostname }}_{{ db.stdout }}"
+    cpu_output: "{{ inventory_hostname }}-ct_cpuq.txt"
 
 - name: Create work directory on remote host
   file:
@@ -36,8 +30,7 @@
   shell: |
     cd {{ audit_dir }}
     chmod +x cpuq.sh 
-    echo 'y' | ./cpuq.sh {{ audit_dir }}
-    mv {{ cpu_output }} {{ new_cpu_output}}
+    echo 'y' | ./cpuq.sh {{ audit_dir }} > /dev/null 2>&1
   register: cpuout
 
 - name: Execute Oracle ReviewLite23.3.sql and rename output directory
@@ -45,12 +38,11 @@
     cmd: |
       . ~/.bash_profile
       cd {{ audit_dir }}
-      rm -rf {{ sql_output }} {{ new_sql_output }}
+      rm -rf {{ sql_output }}
       sqlplus -s / as sysdba << EOF
         @ReviewLite23.3.sql
         exit
       EOF
-      mv {{ sql_output }} {{ new_sql_output }}
   become: yes
   become_method: sudo
   become_user: oracle
@@ -58,19 +50,19 @@
 
 - name: Fetch cpu output files
   fetch:
-    src: "{{ audit_dir }}/{{ new_cpu_output }}"
+    src: "{{ audit_dir }}/{{ cpu_output }}"
     dest: "{{ audit_dir }}/"
     flat: yes
 
 - name: Create database directory on controller
   delegate_to: localhost
   file:
-    path: "{{ audit_dir }}/{{ new_sql_output }}"
+    path: "{{ audit_dir }}/{{ sql_output }}"
     state: directory
 
 - name: Find database output files
   find:
-    path: "{{ audit_dir }}/{{ new_sql_output }}"
+    path: "{{ audit_dir }}/{{ sql_output }}"
     recurse: yes
     patterns: "*.csv"
   register: database_output_files
@@ -78,7 +70,7 @@
 - name: Fetch database output files
   fetch:
     src: "{{ item.path }}"
-    dest: "{{ audit_dir }}/{{ new_sql_output }}/"
+    dest: "{{ audit_dir }}/{{ sql_output }}/"
     flat: yes
   with_items: "{{ database_output_files.files }}"
 
@@ -86,4 +78,4 @@
   delegate_to: localhost
   shell: |
     export PATH=$PATH:/usr/local/bin
-    aws s3 cp {{ audit_dir }}/{{ new_sql_output }} s3://{{ dependencies_bucket.name }}/{{ audit_output }}/{{ new_sql_output }} --recursive
+    aws s3 cp {{ audit_dir }} s3://{{ dependencies_bucket.name }}/{{ audit_output }} --recursive --exclude "*" --include "*-db-*"
