--- a/.github/workflows/oracle-db-validate-backups.yml
+++ b/.github/workflows/oracle-db-validate-backups.yml
@@ -78,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       RmanTarget: ${{ steps.preparermantargetname.outputs.RmanTarget }}
-      TargetEnvironment: ${{ steps.preparermantargetname.outputs.TargetEnvironment }}
+      TargetEnvironment: ${{ steps.preparermantargetname.outputs.TargetEnvironment }}-preapproved
     continue-on-error: false
     steps:
 
