--- a/.github/workflows/oracle-db-validate-backups.yml
+++ b/.github/workflows/oracle-db-validate-backups.yml
@@ -220,7 +220,7 @@ jobs:
              # Get the Account ID for the associated OEM Account which Holds the Slack Token
              OEM_ACCOUNT=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
                    jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
-                   jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first)
+                   jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' )
              OEM_ACCOUNT_NAME=$( echo ${OEM_ACCOUNT} | jq '.key' )
              OEM_ACCOUNT_ID=$( echo ${OEM_ACCOUNT} | jq '.value' )
              echo ${OEM_ACCOUNT_NAME}
