--- a/playbooks/oracle_licence_audit/audit/tasks/audit-weblogic.yml
+++ b/playbooks/oracle_licence_audit/audit/tasks/audit-weblogic.yml
@@ -1,19 +1,18 @@
 - name: Create weblogic dictionary
   set_fact:
     weblogic_info: {}
-
-- name: List cluster that contain '-cluster' in the name, will only be one
-  delegate_to: localhost
-  become: no
-  shell: aws ecs list-clusters --region {{ region }} | jq -r '.clusterArns[]' | grep -- "{{ environment_name }}-cluster" | awk -F'/' '{print $NF}'
-  register: weblogic_cluster
+    weblogic_cluster: "{{ environment_name }}-cluster"
 
 - name: Get the number of Container instances for the service
-  shell: aws ecs describe-clusters --clusters {{ weblogic_cluster.stdout }} --region {{ region }} | jq -r '.clusters[].registeredContainerInstancesCount'
+  delegate_to: localhost
+  become: no
+  shell: aws ecs describe-clusters --clusters {{ weblogic_cluster }} --region {{ region }} | jq -r '.clusters[].registeredContainerInstancesCount'
   register: container_count
 
 - name: List services that contain '-weblogic' in the name
-  shell: aws ecs list-services --cluster {{ weblogic_cluster.stdout }} --region {{ region }} | jq -r '.serviceArns[]' | egrep -- "-weblogic" | awk -F'/' '{print $NF}'
+  delegate_to: localhost
+  become: no
+  shell: aws ecs list-services --cluster {{ weblogic_cluster }} --region {{ region }} | jq -r '.serviceArns[]' | egrep -- "-weblogic" | awk -F'/' '{print $NF}'
   register: weblogic_services
 
 - name: Create temporary weblogic dictionary and Initalise variables
@@ -23,11 +22,11 @@
     total_services_vcpus: 0
     total_available_vpcus: 0
 
-- name: Find cluster information for {{ environment }}
+- name: Find cluster information for {{ environment_name }}
   include_tasks: get-ecs-info.yml
   vars:
     service: "{{ serv }}"
-    cluster: "{{ weblogic_cluster.stdout }}"
+    cluster: "{{ weblogic_cluster }}"
   with_items: "{{ weblogic_services.stdout_lines }}"
   loop_control:
     loop_var: serv
@@ -55,26 +54,36 @@
   with_dict: "{{ weblogic_temp_info }}"
 
 - name: Remove weblogic results file
+  delegate_to: localhost
+  become: no
   file:
     path: "{{ weblogic_output }}"
     state: absent
 
 - name: Create audit directory
+  delegate_to: localhost
+  become: no
   file:
     path: "{{ audit_dir }}"
     state: directory
 
 - name: Create weblogic results file
+  delegate_to: localhost
+  become: no
   file:
     path: "{{ weblogic_output }}"
     state: touch
 
 - name: Set headings in weblogic results file
+  delegate_to: localhost
+  become: no
   lineinfile:
     path: "{{ weblogic_output }}"
     line: "Environment:InstanceType:InstanceTypeVcpuCount:TotalVpcuAvailable:TotalVcpuUsed"
 
 - name: Copy results to local file
+  delegate_to: localhost
+  become: no
   lineinfile:
     path: "{{ weblogic_output }}"
     line: "{{ item.key }}:{{ item.value.instance_type }}:{{ item.value.instance_type_vcpu_count }}:{{item.value.total_no_vcpus_available }}:{{ item.value.total_no_vcpus_used }}"
@@ -86,11 +95,15 @@
   with_dict: "{{ weblogic_info }}"
 
 - name: Copy vcpu total to local file
+  delegate_to: localhost
+  become: no
   lineinfile:
     path: "{{ weblogic_output }}"
     line: "Vcpu Total: {{ total_vpcu }}"
 
 - name: Upload weblogic output file to S3
+  delegate_to: localhost
+  become: no
   shell: |
     export PATH=$PATH:/usr/local/bin
     aws s3 cp {{ weblogic_output }} s3://{{ dependencies_bucket.name }}/{{ audit_output }}/
