--- a/playbooks/oracle_licence_audit/audit/tasks/audit-database.yml
+++ b/playbooks/oracle_licence_audit/audit/tasks/audit-database.yml
@@ -19,34 +19,12 @@
     export PATH=$PATH:/usr/local/bin
     aws s3 cp s3://{{ dependencies_bucket.name }}/dependencies/oracle/utils/cpuq.sh {{ audit_dir }}/cpuq.sh
 
-- name: Download Oracle ReviewLite23.3.sql from s3
-  shell: |
-    export PATH=$PATH:/usr/local/bin
-    aws s3 cp s3://{{ dependencies_bucket.name }}/dependencies/oracle/utils/ReviewLite23.3.sql {{ audit_dir }}/ReviewLite23.3.sql
-  args:
-    creates: "{{ audit_dir }}/ReviewLite23.3.sql"
-
-- name: Execute cpu script and rename output file
+- name: Execute cpu script
   shell: |
     cd {{ audit_dir }}
     chmod +x cpuq.sh 
     echo 'y' | ./cpuq.sh {{ audit_dir }} > /dev/null 2>&1
   register: cpuout
-
-- name: Execute Oracle ReviewLite23.3.sql
-  shell:
-    cmd: |
-      . ~/.bash_profile
-      cd {{ audit_dir }}
-      rm -rf {{ sql_output }}
-      sqlplus -s / as sysdba << EOF
-        @ReviewLite23.3.sql
-        exit
-      EOF
-  become: yes
-  become_method: sudo
-  become_user: oracle
-  register: sqlout
 
 - name: Fetch cpu output files
   fetch:
@@ -54,28 +32,55 @@
     dest: "{{ audit_dir }}/"
     flat: yes
 
-- name: Create database directory on controller
-  delegate_to: localhost
-  become: no
-  file:
-    path: "{{ audit_dir }}/{{ sql_output }}"
-    state: directory
+- name: Only Execute SQL Script If Database Is Running
+  when: db.stdout != ''
+  block:
 
-- name: Find database output files
-  find:
-    path: "{{ audit_dir }}/{{ sql_output }}"
-    recurse: yes
-    patterns: "*.csv"
-  register: database_output_files
+    - name: Download Oracle ReviewLite23.3.sql from s3
+      shell: |
+        export PATH=$PATH:/usr/local/bin
+        aws s3 cp s3://{{ dependencies_bucket.name }}/dependencies/oracle/utils/ReviewLite23.3.sql {{ audit_dir }}/ReviewLite23.3.sql
+      args:
+        creates: "{{ audit_dir }}/ReviewLite23.3.sql"
 
-- name: Fetch database output files
-  fetch:
-    src: "{{ item.path }}"
-    dest: "{{ audit_dir }}/{{ sql_output }}/"
-    flat: yes
-  with_items: "{{ database_output_files.files }}"
+    - name: Execute Oracle ReviewLite23.3.sql
+      shell:
+        cmd: |
+          . ~/.bash_profile
+          cd {{ audit_dir }}
+          . ~/.bash_profile
+          sqlplus -s / as sysdba << EOF
+            SELECT SYSDATE FROM DUAL;
+            exit
+          EOF
+      become: yes
+      become_method: sudo
+      become_user: oracle
+      register: sqlout
 
-- name: Upload database output directory to S3
+
+    - name: Create database directory on controller
+      delegate_to: localhost
+      become: no
+      file:
+        path: "{{ audit_dir }}/{{ sql_output }}"
+        state: directory
+
+    - name: Find database output files
+      find:
+        path: "{{ audit_dir }}/{{ sql_output }}"
+        recurse: yes
+        patterns: "*.csv"
+      register: database_output_files
+
+    - name: Fetch database output files
+      fetch:
+        src: "{{ item.path }}"
+        dest: "{{ audit_dir }}/{{ sql_output }}/"
+        flat: yes
+      with_items: "{{ database_output_files.files }}"
+
+- name: Upload database output directory to S3 From Controller
   delegate_to: localhost
   become: no
   shell: |
