--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -83,7 +83,7 @@ jobs:
           echo "targets=$targets" >> $GITHUB_OUTPUT
           if [[ $((${{ strategy.job-index }} + 1 )) -eq  ${{ strategy.job-total }} ]]
           then
-            echo "lastjob=true" >> $GITHUB_OUTPUT
+            echo lastjob="true" >> $GITHUB_OUTPUT
           fi
 
       - name: Configure AWS Credentials
@@ -106,5 +106,7 @@ jobs:
       - name: Start Ansible Oracle Licence Audit Upload When Last Environment Processed
         if: ${{ steps.databasetargets.outputs.lastjob != '' }}
         run: |
-          export ANSIBLE_CONFIG=$ansible_config -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}
-          $command -e upload=yes
+          export ANSIBLE_CONFIG=$ansible_config
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          -e targets=${{ steps.databasetargets.outputs.targets }} \
+          -e upload=yes
