--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -30,12 +30,13 @@ jobs:
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     strategy:
+      fail-fast: false
       matrix:
         environment: [delius-core-dev,delius-core-test]
     #,delius-core-training,delius-core-stage,delius-core-pre-prod,delius-core-prod]
     environment: ${{ matrix.environment }}
     timeout-minutes: 1440
-    continue-on-error: false
+    continue-on-error: true
 
     steps:
 
