Only run one job at a time

--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -31,6 +31,7 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         environment: [delius-core-dev,delius-core-test]
     #,delius-core-training,delius-core-stage,delius-core-pre-prod,delius-core-prod]
