--- a/.github/workflows/oracle-db-schedule-delius-test-backup.yml
+++ b/.github/workflows/oracle-db-schedule-delius-test-backup.yml
@@ -1,8 +1,8 @@
 name: "Oracle: scheduled_delius_core_test_delius_primarydb_database_backup"
 on:
   schedule:
-    - cron: '19 13 * * 1,2,4,5'
-    - cron: '30 13 * * 3'
+    - cron: '* 07 * * 1,2,4,5'
+    - cron: '* 07 * * 3'
 jobs:
   prepare-parameters:
     runs-on: ubuntu-latest
@@ -12,7 +12,7 @@ jobs:
       - name: Parameters
         id: parameters
         run: |
-          [ "${{ github.event.schedule }}" == '30 07 * * 1,2,4,5' ] && Period="daily" || Period="weekly"
+          [ "${{ github.event.schedule }}" == '* 07 * * 1,2,4,5' ] && Period="daily" || Period="weekly"
           echo "Period=$Period" >> $GITHUB_OUTPUT
   run-workflow-call:
     needs: prepare-parameters
