--- a/.github/workflows/oracle-db-validate-backups.yml
+++ b/.github/workflows/oracle-db-validate-backups.yml
@@ -91,7 +91,6 @@ jobs:
                 echo "slack_channel=delius-aws-oracle-dev-alerts-test" >> $GITHUB_OUTPUT
              fi
 
-
       - name: Check Restore DateTime Input
         if: ${{ (github.event_name == 'workflow_dispatch') && (github.event.inputs.RestoreDatetime != '') }}
         run: |
@@ -227,7 +226,6 @@ jobs:
         id: get-slack-token
         if: failure()
         run: |
-               set -x
                ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
                OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
                      jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
@@ -243,7 +241,7 @@ jobs:
         if: failure()
         uses: slackapi/slack-github-action@v1.25.0
         with:
-            channel-id: "${{ steps.get-slack-channel.outputs.slack_channel }}"
+            channel-id: "${{ steps.prepare-slack-channel-name.outputs.slack_channel }}"
             payload: |
               {"blocks":[{"type": "section","text": {"type": "mrkdwn","text": ":no_entry: Failed GitHub Action:"}},{"type": "section","fields":[{"type": "mrkdwn","text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"},{"type": "mrkdwn","text": "*Job:*\n${{ github.job }}"},{"type": "mrkdwn","text": "*Repo:*\n${{ github.repository }}"}]}]}
         env:
